Actions
Bug #10440
closedipd: NULL pointer errors
Start date:
2019-02-22
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
In file included from ../../common/sys/param.h:48:0, from ../../common/sys/t_lock.h:38, from ../../common/sys/file.h:35, from ../../common/inet/ipd/ipd.c:152: ../../common/inet/ipd/ipd.c: In function 'ipd_ioctl_list': ../../common/sys/null.h:32:14: error: passing argument 4 of 'ddi_copyout' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/inet/ipd/ipd.c:883:41: note: in expansion of macro 'NULL' nzones * sizeof (ipd_ioc_info_t), NULL) != 0) ^~~~ In file included from ../../common/inet/ipd/ipd.c:157:0: ../../common/sys/sunddi.h:1814:12: note: expected 'int' but argument is of type 'void *' extern int ddi_copyout(const void *, void *, size_t, int); ^~~~~~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 1f14a912903a53cb5b4ed3f75e9e4d2be8ded1ba
commit 1f14a912903a53cb5b4ed3f75e9e4d2be8ded1ba Author: Toomas Soome <tsoome@me.com> Date: 2019-02-25T19:20:19.000Z 10440 ipd: NULL pointer errors Reviewed by: Aurélien Larcher <aurelien.larcher@gmail.com> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions